--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
-  app: "multi-docker"
+  app: "docker-multi"
   env: "Multidocker-env"
   bucket_name: "elasticbeanstalk-us-west-2-319241010998"
   bucket_path: "docker-multi"
