update to env name in deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
   app: "multi-docker"
-  env: "MultiDocker-env"
+  env: "Multidocker-env"
   bucket_name: "elasticbeanstalk-us-west-2-319241010998"
   bucket_path: "docker-multi"
   on:
